--- a/styles/contact.css
+++ b/styles/contact.css
@@ -7,6 +7,7 @@
   gap: 30px;
   padding: 30px;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+  width: 500px;
 }
 
 #contact main {
@@ -34,14 +35,13 @@
 }
 
 /* map section inside contact */
-.map {
+.details .map {
   flex: 1;
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 30px;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
   border-radius: 12px;
+  width: 100%;
 }
 
 .map iframe {
