--- a/styles/pricing.css
+++ b/styles/pricing.css
@@ -20,6 +20,48 @@
   padding: 20px;
 }
 
+#pricing .plan .plan-texts h2{
+  color: var(--bg-primary);
+}
+
+#pricing .plan span{
+  display: flex;
+}
+
+#pricing .plan span h1{
+  font-size: 50px;
+  color: var(--btn);
+}
+#pricing .plan span h3{
+  font-size: 30px;
+  color: var(--btn);
+}
+#pricing .plan span p{
+  display: flex;
+  align-items: end;
+}
+
+#pricing .plan .plan-texts{
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+#pricing .plan .plan-texts aside{
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+#pricing .plan .plan-texts aside i{
+  padding-right: 10px;
+  color: rgb(6, 169, 6);
+}
+
+#pricing .plan .plan-texts aside i.red{
+  color: red;
+}
+
 #pricing .plan-btn {
   display: flex;
   justify-content: center;
