--- a/styles/contact.css
+++ b/styles/contact.css
@@ -5,9 +5,9 @@
   display: flex;
   flex-direction: column;
   gap: 30px;
-  padding: 30px;
+  padding: 10px;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
-  width: 500px;
+  width: 450px;
 }
 
 #contact main {
@@ -117,6 +117,11 @@
   #contact main {
     flex-direction: column;
     align-items: center;
+    justify-content: center;
+  }
+
+  #contact .details{
+    width: auto;
   }
 
   .contact-form {
